--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
+    "pdfjs-dist": "^4.10.38",
     "sqlite3": "^5.1.7"
   }
 }
