--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Philip Rosen",
   "license": "ISC",
   "dependencies": {
+    "bullmq": "^5.34.10",
     "express": "^4.21.2",
+    "ioredis": "^5.4.2",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^4.10.38",
     "sqlite3": "^5.1.7"
