--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "jest": {
     "testEnvironment": "node",
     "transform": {},
-    "testMatch": ["**/tests/**/*.test.js"],
-    "setupFiles": ["./tests/setup.js"]
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "setupFiles": [
+      "./tests/setup.js"
+    ]
   },
   "author": "Philip Rosen",
   "license": "ISC",
@@ -27,6 +31,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "supertest": "^7.0.0"
   }
 }
