--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "author": "Philip Rosen",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^4.1.0",
     "bullmq": "^5.34.10",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "multer": "^1.4.5-lts.1",
