--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.83.0",
     "pdfjs-dist": "^4.10.38",
     "sqlite3": "^5.1.7"
   },
