--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.83.0",
     "pdfjs-dist": "^4.10.38",
+    "react-router-dom": "^7.3.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
